--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/next": "^4.7.10",
     "airtable": "^0.12.2",
     "axios": "^1.9.0",
+    "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.9.7",
     "next": "15.3.1",
     "react": "^19.0.0",
