--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@next/font": "^14.2.15",
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.77.0",
     "@vercel/next": "^4.7.10",
